# AdventOfCode

./: README.md  pyproject.toml
1st/: solution.py  solution_multiprocess.py
4th/: solution.py
